--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,22 @@
               [value]="gender"> {{gender}}
           </label>
         </div>
+        <div formArrayName="hobbies"> 
+          <h4>your hobbies</h4>
+          <button 
+          class="btn btn-primary" 
+          type="button" 
+          (click)="controls"
+          >Add Hobby</button>
+          <div 
+          class="form-group"
+          *ngFor="let hobbyControl of controls; let i = index">
+            <input 
+            type="text" 
+            class="form-control" 
+            [formControlName]="i">
+          </div>
+        </div>
         <span 
             *ngIf="!signupForm.valid && signupForm.touched"
             class="help-block">please inter a valid data
