working in form array

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,11 +44,11 @@
           >Add Hobby</button>
           <div 
           class="form-group"
-          *ngFor="let hobbyControl of controls; let i = index">
+          >
             <input 
             type="text" 
             class="form-control" 
-            [formControlName]="i">
+            formControlName="contol">
           </div>
         </div>
         <span 
