--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,15 +40,16 @@
           <button 
           class="btn btn-primary" 
           type="button" 
-          (click)="controls"
+          (click)="onAddHobby()"
           >Add Hobby</button>
           <div 
-          class="form-group"
+          class="form-group" 
+          *ngFor="let hobbyControl of controls; let i = index"
           >
             <input 
             type="text" 
             class="form-control" 
-            formControlName="contol">
+            [formControlName]="i">
           </div>
         </div>
         <span 
